# spwncord-bot

./: .gitignore  Cargo.toml
src/: main.rs
